[tool.black]
line-length = 88
target-version = ['py311']
excludes = [
    ".venv",
    "venv",
    ".git",
    "build",
    "alembic",
    "transformers",
    "transformers/*",
]

[build-system]
requires = ["black"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
