[tool.poetry]
name = "llama2d"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.37.0"
google-cloud-vision = "3.4.4"
torch = "2.0.1"
sentencepiece = "0.1.99"
pillow = "10.0.1"
2captcha-python = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
